feat: ✨ converting received data form API to JSON, even with two chunks on the same transmission

--- a/app/index.html
+++ b/app/index.html
@@ -5,8 +5,22 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>WebStream is the Horror</title>
+		<link rel="stylesheet" href="styles.css" />
 	</head>
 	<body>
-		Hello World!!
+		<button id="Start">Start</button>
+		<button id="Stop">Stop</button>
+		<div class="container">
+			<main id="cards" class="grid">
+				<article>
+					<div class="text">
+						<h3>Hello item</h3>
+						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit</p>
+						<a href="http://">Here's Why</a>
+					</div>
+				</article>
+			</main>
+		</div>
+		<script src="index.js" type="module"></script>
 	</body>
 </html>
