feat: ✨ plotting writable stream on the website

--- a/app/index.html
+++ b/app/index.html
@@ -8,8 +8,8 @@
 		<link rel="stylesheet" href="styles.css" />
 	</head>
 	<body>
-		<button id="Start">Start</button>
-		<button id="Stop">Stop</button>
+		<button id="start">Start</button>
+		<button id="stop">Stop</button>
 		<div class="container">
 			<main id="cards" class="grid">
 				<article>
