--- a/app/index.html
+++ b/app/index.html
@@ -11,15 +11,7 @@
 		<button id="start">Start</button>
 		<button id="stop">Stop</button>
 		<div class="container">
-			<main id="cards" class="grid">
-				<article>
-					<div class="text">
-						<h3>Hello item</h3>
-						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit</p>
-						<a href="http://">Here's Why</a>
-					</div>
-				</article>
-			</main>
+			<main id="cards" class="grid"></main>
 		</div>
 		<script src="index.js" type="module"></script>
 	</body>
